[package]
name = "network"
version = "1.0.0"
edition = "2024"

[features]
default = []
wifi = ["async-trait"]
wpa = ["libc", "config", "tempfile"]

[dependencies]
#基础库
anyhow = '1.0.100'
regex = '1.11.3'
serde_json = '1.0.145'
log = '0.4.28'
serde = { version = "1.0.228", features = ["derive"] }
if-watch = { version = "3.2.1", features = ["tokio"] }
netdev = { version = "0.39.0", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }

#tokio
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
    "net",
    "io-util",
    "process",
    "time",
    "sync",
] }


#wpa
async-trait = { version = "0.1.89", optional = true }
libc = { version = "0.2.175", optional = true }
config = { version = "0.15.17", default-features = false, features = [
    "ini",
], optional = true }
tempfile = { version = "3.23.0", optional = true }


[dev-dependencies]
tabled = "0.20.0"
fast_log = "1.7.7"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "io-std",
    "io-util",
] }
regex = "1.11.1"
encoding_rs = "0.8.35"
